@@ -37,7 +37,7 @@ PKG_CHECK_MODULES(NAUTILUS, [
 	libnautilus-extension >= $NAUTILUS_REQUIRED
 	glib-2.0 >= $GLIB_REQUIRED
 	gio-2.0,
-	eel-2.0
+	gconf-2.0
 ])
 PKG_CHECK_MODULES(GCONF, gconf-2.0)
 PKG_CHECK_MODULES(GNOMEDESKTOP, gnome-desktop-2.0 >= $LIBGNOME_DESKTOP_REQUIRED)
