@@ -17,6 +17,9 @@ nautilus_extensiondir=$(NAUTILUS_EXTENSION_DIR)
 nautilus_extension_LTLIBRARIES=libnautilus-open-terminal.la
 
 libnautilus_open_terminal_la_SOURCES = \
+	eel-gnome-extensions.c       \
+	eel-gnome-extensions.h       \
+	nautilus-open-terminal.h       \
 	nautilus-open-terminal.c       \
 	nautilus-open-terminal.h       \
 	open-terminal.c
